  Regex expressions with as_match or as_group_list = True. Reported by
  Waqas Ilyas, in Issue #612 - good catch!

- Fixed type annotation for `replace_with`, to accept `Any` type. Fixes Issue #602,
  reported by esquonk.

- Added locking around potential race condition in `ParserElement.reset_cache`, as
  well as other cache-related methods. Fixes Issue #604, reported by CarlosDescalziIM.

- Substantial update to docstrings and doc generation in preparation for 3.3.0,
  great effort by FeRD, thanks!


Version 3.2.3 - March, 2025
---------------------------
- Fixed bug released in 3.2.2 in which `nested_expr` could overwrite parse actions
  for defined content, and could truncate list of items within a nested list.
  Fixes Issue #600, reported by hoxbro and luisglft, with helpful diag logs and
  repro code.


Version 3.2.2 - March, 2025
---------------------------
- Released `cvt_pyparsing_pep8_names.py` conversion utility to upgrade pyparsing-based
  programs and libraries that use legacy camelCase names to use the new PEP8-compliant
  snake_case method names. The converter can also be imported into other scripts as

        from pyparsing.tools.cvt_pyparsing_pep8_names import pep8_converter

- Fixed bug in `nested_expr` where nested contents were stripped of whitespace when
  the default whitespace characters were cleared (raised in this StackOverflow
  question https://stackoverflow.com/questions/79327649 by Ben Alan). Also addressed
  bug in resolving PEP8 compliant argument name and legacy argument name.

- Fixed bug in `rest_of_line` and the underlying `Regex` class, in which matching a
  pattern that could match an empty string (such as `".*"` or `"[A-Z]*"` would not raise
  a `ParseException` at or beyond the end of the input string. This could cause an
  infinite parsing loop when parsing `rest_of_line` at the end of the input string.
  Reported by user Kylotan, thanks! (Issue #593)
