@@ -57,6 +57,9 @@ Version 3.2.4 - under development
 - Added locking around potential race condition in `ParserElement.reset_cache`, as
   well as other cache-related methods. Fixes Issue #604, reported by CarlosDescalziIM.
 
+- Some minor reformatting of auto-generated expression names in `one_of` and
+  `infix_notation`, for improved railroad diagram labeling.
+
 - Substantial update to docstrings and doc generation in preparation for 3.3.0,
   great effort by FeRD, thanks!
 
